k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - image: marcotechstarter/frontend:latest
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
